# vision_based_robot_evasion

./: CMakeLists.txt  README.md  package.xml
Vision_based_robot_evasion/: zed_calib.json  zed_calib_2.json
include/my_cpp_py_pkg/: franka_robot_model.hpp  model_example_controller.hpp
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/my_cpp_py_pkg/lib/my_cpp_py_pkg/: cpp_executable  img_to_kpts.py  kpts_to_bbox.py
install/my_cpp_py_pkg/local/lib/python3.10/dist-packages/my_cpp_py_pkg/: __init__.py  kalman.py  visualisations.py  visuals.py  zed_calib.json
install/my_cpp_py_pkg/local/lib/python3.10/dist-packages/my_cpp_py_pkg-0.0.0-py3.10.egg-info/: PKG-INFO  SOURCES.txt  dependency_links.txt  top_level.txt
install/my_cpp_py_pkg/local/lib/python3.10/dist-packages/my_cpp_py_pkg/ogl_viewer/: viewer.py
install/my_cpp_py_pkg/share/ament_index/resource_index/package_run_dependencies/: my_cpp_py_pkg
install/my_cpp_py_pkg/share/ament_index/resource_index/parent_prefix_path/: my_cpp_py_pkg
install/my_cpp_py_pkg/share/my_cpp_py_pkg/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/my_cpp_py_pkg/share/my_cpp_py_pkg/cmake/: my_cpp_py_pkgConfig-version.cmake  my_cpp_py_pkgConfig.cmake
install/my_cpp_py_pkg/share/my_cpp_py_pkg/environment/: ament_prefix_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
install/my_cpp_py_pkg/share/my_cpp_py_pkg/launch/: my_script_launch.py
launch/: my_script_launch.py
log/: latest_build
my_cpp_py_pkg/: kalman.py  visualisations.py  visuals.py  zed_calib_2.json
scripts/: img_to_kpts.py  kpts_to_bbox.py  motion_generator.py  py_node.py  robot_pose.py  run_stats.py  tmpkpd9waje  urdf_relay.py
src/: cpp_node.cpp
vision_based_robot_evasion/: __init__.py  visuals.py  zed_calib_4.json
vision_based_robot_evasion/cv_viewer/: tracking_viewer.py
